--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@ build
 
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
-
+*.cmake
+*.cbp
 *~
 *.autosave
 *.a
