--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ build
 
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
+CMakeLists.txt.user
 *.cmake
 *.cbp
 *~
